<resources>
    <string name="app_name">Now Playing</string>
    <string name="ambient_play_title" translatable="false">Now Playing</string>
    <string name="ambient_play_recognition_information" translatable="false">NPI</string>
    <string name="ambient_play_summary">Show nearby songs</string>
    <string name="ambient_play_lockscreen_title">Show songs on lock screen</string>
    <string name="ambient_play_lockscreen_summary">Show on lock screen when a song is recognized</string>
    <string name="ambient_play_notifications_title">Notifications</string>
    <string name="ambient_play_notifications_summary">Show notification when a song is recognized</string>
    <string name="ambient_play_switch_bar_on">On</string>
    <string name="ambient_play_switch_bar_off">Off</string>
    <string name="ambient_play_help_text">When music is playing nearby, you can see the song name and artist. Now Playing works offline and never sends songs or conversations to Google.</string>
    <string name="ambient_play_history">Now Playing history</string>
    <string name="track_listing">%1s by %1s</string>
    <string name="ambient_play_loading_data">Loading data…</string>
    <string name="ambient_play_history_today">Today</string>
    <string name="ambient_play_history_yesterday">Yesterday</string>
    <string name="ambient_play_history_dialog_play">Play now</string>
    <string name="ambient_play_history_dialog_search">Search on web</string>
    <string name="ambient_play_history_dialog_remove">Remove</string>
    <string name="ambient_play_history_empty">Music history is empty</string>
    <string name="ambient_play_history_menu_remove_all">Remove all</string>
    <string name="ambient_play_history_menu_add_to_home">Add to Home Screen</string>
    <string name="ambient_play_history_dialog_remove_all_confirmation">Are you sure?</string>
    <string name="ambient_play_saving_options_title">Saving options</string>
    <string name="ambient_play_saving_options_summary">Options to decrease battery and network usage</string>
    <string name="ambient_play_saving_options_low_battery_title">Low battery</string>
    <string name="ambient_play_saving_options_low_battery_summary">Disable recognition when battery is low</string>
    <string name="ambient_play_saving_options_mobile_data_title">Mobile data</string>
    <string name="ambient_play_saving_options_mobile_data_summary">Disable recognition when mobile data is enabled</string>
    <string name="ambient_play_saving_options_quiet_period_title">Quiet period</string>
    <string name="ambient_play_saving_options_quiet_period_enable_title">Enable quiet period</string>
    <string name="ambient_play_saving_options_quiet_period_enable_summary">Disable recognition for a certain period of time</string>
    <string name="ambient_play_saving_options_quiet_period_start_time_title">Start time</string>
    <string name="ambient_play_saving_options_quiet_period_end_time_title">End time</string>
    <string name="title_activity_prefs">Settings</string>
    <string name="title_activity_settings">Now Playing History</string>
    <string name="title_activity_ambient_music_settings">AmbientMusicSettingsActivity</string>
    <string name="title_activity_updater">UpdaterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
